add tailwind plugin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PickleDager</title>
   </head>
   <body>
-    <div id="root"> </div>
+    <div id="root" class="flex flex-col w-full h-screen"> </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
